# Quant

./: PRD.md  TECHNICAL_DOCUMENTATION.md  debug_history_filter.php  debug_meta_api.php  dns_test.php  manual_history.php  manual_test.php
agentic_system/: .env.example  .gitignore  .pre-commit-config.yaml  IMPLEMENTATION_PLAN.md  pyproject.toml
agentic_system/python/: callback_handler.py  debug_sentiment.py  requirements-dev.txt  requirements.txt  test_loop.py
agentic_system/python/outputs/: sentiment_backtest_AAPL_vader.html
agentic_system/python/scripts/: backtest_sentiment.py  mt5_bridge_server.py  test_deepseek.py  test_training_backtest.py  testing_dashboard.py  trading_dashboard.py
agentic_system/python/scripts/.streamlit/: config.toml
agentic_system/python/scripts/components/: __init__.py  trading_chart.py
agentic_system/python/src/: __init__.py
agentic_system/python/src/agents/: __init__.py  signal_intelligence.py
agentic_system/python/src/api/: __init__.py  main.py
agentic_system/python/src/backtesting/: __init__.py  engine.py  metrics.py  reporter.py
agentic_system/python/src/config/: __init__.py  base.py  finrl_config.py  model_configs.py
agentic_system/python/src/data/: __init__.py  fetcher.py  preprocessor.py  sentiment_fetcher.py  stream.py
agentic_system/python/src/environments/: __init__.py  discrete_trading_env.py  trading_env.py
agentic_system/python/src/features/: __init__.py  sentiment_analyzer.py  technical_indicators.py
agentic_system/python/src/llm/: __init__.py  prompts.py  (+1 more)
agentic_system/python/tests/: conftest.py
(+70 files in other folders)
